--- a/templates/index.html
+++ b/templates/index.html
@@ -28,5 +28,26 @@
             <p class="light">Select this option to build, delete, or update a rotation</p>
           </div>
         </div>
-      </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h5 class="center"><a href="/playlistfix">Playlist Fix</a></h5>
+            <p class="light">Select this option to upload a playlist to fix. Also includes python download for bulk fixing.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h5 class="center"><a href="http://gofile.me/7258s/av44leNBn">Promos/PSAS/etc</a></h5>
+            <p class="light">A Link to all the Legal ID's, Promos, PSA's, LPT's, ETC's</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h5 class="center"><a href="/static/COVID_Manual_Phase_7.pdf">Covid Manual Phase 7</a></h5>
+            <p class="light">Our current Covid guidelines, including instructions to use this software.</p>
+          </div>
+        </div>
+</div>
 {% endblock %}
