--- a/templates/rotation.html
+++ b/templates/rotation.html
@@ -146,10 +146,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="input-field col s12 m4">
+                <div class="input-field col s12 m2">
                     <label>
                         <input name="clean" type="checkbox" value="clean"/>
                         <span>This playlist is clean</span>
+                    </label>
+                </div>
+                <div class="input-field col s12 m2">
+                    <label>
+                        <input name="replace" type="checkbox" value="replace" checked/>
+                        <span>Replace any rotations at this time</span>
                     </label>
                 </div>
             </div>
